<resources>
    <string name="app_name">Rick_and_Morty</string>
    <string name="characters">Персонажи</string>
    <string name="locations">Локации</string>
    <string name="episodes">Эпизоды</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character_name_title">Имя:</string>
    <string name="character_species_title">Вид:</string>
    <string name="character_status_title">Статус:</string>
    <string name="character_gender_title">Пол:</string>
    <string name="details_icon">Details_icon</string>
    <string name="origin_title">Происхождение: </string>
    <string name="location">Местонахождение: </string>
</resources>