<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailsCharacterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/medium_margin"
        android:background="@color/main_color">

        <ImageView
            android:id="@+id/image_char_details"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_margin="@dimen/medium_margin"
            android:contentDescription="@string/details_icon"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:orientation="vertical"
            app:constraint_referenced_ids="name_char_details, species_char_details, status_char_details, gender_char_details"
            app:layout_constraintBottom_toBottomOf="@+id/image_char_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_char_details"
            app:layout_constraintTop_toTopOf="@+id/image_char_details"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/name_char_details"
            style="@style/text_style"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/character_name_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/species_char_details"
            app:layout_constraintEnd_toEndOf="@+id/flow"
            app:layout_constraintStart_toStartOf="@+id/flow" />

        <TextView
            android:id="@+id/species_char_details"
            style="@style/text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/character_name_title"
            app:layout_constraintEnd_toEndOf="@+id/flow"
            app:layout_constraintStart_toStartOf="@+id/flow"
            app:layout_constraintTop_toBottomOf="@+id/name_char_details" />


        <TextView
            android:id="@+id/status_char_details"
            style="@style/text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/character_name_title"
            app:layout_constraintEnd_toEndOf="@+id/flow"
            app:layout_constraintStart_toStartOf="@+id/flow"
            app:layout_constraintTop_toBottomOf="@+id/species_char_details" />

        <TextView
            android:id="@+id/gender_char_details"
            style="@style/text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/character_name_title"
            app:layout_constraintEnd_toEndOf="@+id/flow"
            app:layout_constraintStart_toStartOf="@+id/flow"
            app:layout_constraintTop_toBottomOf="@+id/status_char_details" />

        <TextView
            android:id="@+id/type"
            style="@style/text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintEnd_toEndOf="@+id/image_char_details"
            app:layout_constraintStart_toStartOf="@+id/image_char_details"
            app:layout_constraintTop_toBottomOf="@+id/image_char_details" />

        <TextView
            android:id="@+id/origin"
            style="@style/detail_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintEnd_toEndOf="@+id/flow"
            app:layout_constraintStart_toStartOf="@+id/image_char_details"
            app:layout_constraintTop_toBottomOf="@+id/type"
            android:text="@string/origin_title"/>

        <TextView
            android:id="@+id/location"
            style="@style/detail_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintEnd_toEndOf="@+id/flow"
            app:layout_constraintStart_toStartOf="@+id/image_char_details"
            app:layout_constraintTop_toBottomOf="@+id/origin"
            android:text="@string/location"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/details_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location"
            tools:listitem="@layout/item_episode" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
